Resolve previous errors from pull request, upload resume, add projects, world image, edit icons, dark mode feature, cyle through quotes, remove random quote feature.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -9,8 +9,10 @@
 }
 
 p {
-    font-size: 18px;
+  font-size: 18px;
+  line-height: 22px;
 }
+
 figure {
   display: inline-block;
   text-align: center;
@@ -21,39 +23,50 @@ h1 {
   font-size: 72px;
 }
 
+h5 {
+    font-weight: normal;
+    font-size: 20px;
+}
+
 * {
-    margin: 3px;
-    padding: 0px;
-    box-sizing: border-box;
+  margin: 3px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
 nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    min-height: 4vh;
-    background-color: rgb(206, 17, 38);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 4vh;
+  background-color: rgb(206, 17, 38);
 }
 
 .nav-links {
-    display: flex;
-    justify-content: space-around;
-    width: 180%;
-    font-size: 18px;
-    letter-spacing: .5px;
+  display: inline-flex;
+  justify-content: space-around;
+  width: 180%;
+  font-size: 18px;
+  letter-spacing: .5px;
 }
 
 .nav-links a {
-    color: rgb(226, 226, 226);
-    text-decoration: none;
+  color: rgb(226, 226, 226);
+  text-decoration: none;
 }
 
 .nav-links li {
-    list-style: none;
+  list-style: none;
 }
+
 .center {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 75%;
+}
+
+.dark-mode {
+    background-color: rgb(14, 17, 17);
+    color: rgb(226, 226, 226);
 }
